# datastructs

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  configure.dox  datastructs.c  datastructs.h  datastructs_binarytree.c  datastructs_deque.c  datastructs_nodes.c  datastructs_queue.c  datastructs_set.c  datastructs_stack.c  datastructs_tree.c  datastructs_util.c  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/html/: annotated.html  classes.html  configure_8dox.html  datastructs_8c.html  datastructs_8h.html  datastructs_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  group__Binarytree.html  group__Deque.html  group__Node.html  group__Queue.html  group__Set.html  group__Stack.html  group__Tree.html  index.html  md_README.html  menudata.js  modules.html  pages.html  structbag.html  structbinarytree.html  structdeque.html  structdl__node.html  structdlp__node.html  structqueue.html  structset.html  structsl__node.html  structstack.html  structtree.html  structtree__node.html
doc/latex/: annotated.tex  configure_8dox.tex  datastructs_8c.tex  datastructs_8h.tex  files.tex  group__Binarytree.tex  group__Deque.tex  group__Node.tex  group__Queue.tex  group__Set.tex  group__Stack.tex  group__Tree.tex  md_README.tex  refman.tex  (+12 more)
examples/: Makefile  datastructs.h  example_binarytree.c  example_binarytree2.c  example_queue.c  example_sequential.c  example_stack.c  example_string.c  profile_time.h
(+45 files in other folders)
