lib_LTLIBRARIES = libdatastructs.la

# Change this if it breaks, use 
libdatastructs_la_SOURCES = datastructs_nodes.c datastructs_stack.c\
							datastructs_queue.c datastructs_deque.c\
							datastructs_binarytree.c datastructs_set.c\
							datastructs_tree.c datastructs_util.c
libdatastructs_la_LDFLAGS = -version-info 0:0:0

pkginclude_HEADERS = datastructs.h
